--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,11 @@ nav {
     line-height: 1.6;
     color: #333;
     max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
   }
+  
 
 /* Header Section */
 .intro {
